yaml-examples/ciao/ciao-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciao
  labels:
    app: ciao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ciao
  template:
    metadata:
      labels:
        app: ciao
    spec:
      containers:
        - name: ciao
          image: brotandgames/ciao
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/db/sqlite
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ciao
