yaml-examples/ciao/ciao-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciao
spec:
  rules:
  - host: ciao.lan
    http:
      paths:
      - backend:
          service:
            name: ciao
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
